--- a/HelloWorldServlet/web/index.html
+++ b/HelloWorldServlet/web/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
+
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Submit your name</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <h1>Please Fill Out The Form Below</h1>
+        <h1>Put name here</h1>
         <div>
-            <form>
-                
+            <form action="HelloWorld">
+                Enter First name: <input type="text" name="firstname"><br>
+                Enter Last name : <input type="text" name="lastname"><br>
+                <input type="submit" value="submit">
             </form>
-        </div>
+        </div>   
     </body>
 </html>
