--- a/HelloWorldServlet/web/index.html
+++ b/HelloWorldServlet/web/index.html
@@ -19,7 +19,7 @@
     <body>
         <h1>Welcome To My Website</h1>
         <div>
-            <form action="HelloWorld">
+            <form action="HelloWorld"><!-- Calling the HelloWorld.java servlet -->
                 <fieldset>
                     <legend>Personal Information:</legend>
                         Enter First name:<br>
